Actualización de Pre-Entrega1

--- a/CODERHOUSE/PYTHON-DJANGO/Entrega1/Primera_Pre_Entrega1_Leal.ipynb
+++ b/CODERHOUSE/PYTHON-DJANGO/Entrega1/Primera_Pre_Entrega1_Leal.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO448Rmt3T8KoXmz/DpG54s",
+      "authorship_tag": "ABX9TyMtkla7HI/Ro2ZAunBEbDWP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eVcZVEvNpGof",
-        "outputId": "4cbdcbeb-d7f5-4715-e404-76a3c16ecd8d"
+        "outputId": "83b3f68a-3beb-44dd-bd1d-8d19bb71c002"
       },
       "outputs": [
         {
@@ -53,6 +53,47 @@
     {
       "cell_type": "code",
       "source": [
+        "# Para crear archivo JSON\n",
+        "import json"
+      ],
+      "metadata": {
+        "id": "nf0jVsocExac"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ÚNICO LLAMADO PARA JUGAR CON LAS FUNCIONES SOLICITADAS"
+      ],
+      "metadata": {
+        "id": "L--Xu2XOGAyZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "menu()"
+      ],
+      "metadata": {
+        "id": "8gCz2NLjKoie"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "_____________________________-\n"
+      ],
+      "metadata": {
+        "id": "u4HmQ9QFGMKc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Variables globales para trabajar y rellenar\n",
         "nombre = \"\"\n",
         "logueado = False\n",
@@ -61,7 +102,7 @@
       "metadata": {
         "id": "DEMR8GdKst0Z"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -78,6 +119,7 @@
         "          (2)- Consulta por último usuario registrado\n",
         "          (3)- Revisa listado de usuarios\n",
         "          (4)- Ingresa con tus credenciales\n",
+        "          (5)- Guardar Lista usuarios a JSON\n",
         "          (99) - Salir del programa\n",
         "          \"\"\")\n",
         "         return opcion\n",
@@ -95,7 +137,6 @@
         "        if opcion_escogida == \"1\":\n",
         "            #Registra nuevo usuario\n",
         "            registrar_usuario()\n",
-        "            print(f\"Esta es la nueva lista de usuarios: {lista_usuarios}\")\n",
         "            volver_menu()\n",
         "\n",
         "        elif opcion_escogida == \"2\":\n",
@@ -106,7 +147,8 @@
         "        elif opcion_escogida == \"3\":\n",
         "            #Revisa listado de usuarios. Esto no se vincula a función específica, sino a una confirmación de si está logueado o no para poder acceder.\n",
         "            if (logueado == True):\n",
-        "                print(lista_usuarios)\n",
+        "                mostrar_usuarios()\n",
+        "                #print(f\"Esta es la lista de usuarios hasta el momento con sus respectivas contraseñas: {lista_usuarios}\")\n",
         "            else:\n",
         "                print(\"Debes loguearte primero para ver toda la lista\")\n",
         "            volver_menu()\n",
@@ -119,6 +161,12 @@
         "                logueado = usuario[1]\n",
         "            volver_menu()\n",
         "\n",
+        "        elif opcion_escogida == \"5\":\n",
+        "            #Guardar lista de usuarios de la sesión en JSON (persistencia)\n",
+        "            print(f\"Esta es la lista de usuatios sin transformar: {lista_usuarios}\")\n",
+        "            guardar_json()\n",
+        "            volver_menu()\n",
+        "\n",
         "        else:\n",
         "            print(\"Opción no válida. Intente nuevamente.\")\n",
         "            opcion_escogida = opciones()\n",
@@ -126,12 +174,13 @@
         "    else:\n",
         "            print(\"\\n---------------------------------\\n\")\n",
         "            print(\"Gracias, nos vemos\") #Despedida del programa\n",
-        "            print(\"\\n---------------------------------\\n\")\n"
+        "            print(\"\\n---------------------------------\\n\")\n",
+        "            exit()\n"
       ],
       "metadata": {
         "id": "y8XvC77diTR-"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -152,7 +201,7 @@
       "metadata": {
         "id": "drzTEFy6ibr5"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -176,7 +225,6 @@
         "    usuarios = {'nombre': nombre, 'clave': clave}\n",
         "    lista_usuarios.append(usuarios) # Se añade nuevo usuario registrado a la lista de usuarios\n",
         "\n",
-        "\n",
         "    print(\"Ok, usuario y contraseña creada\")\n",
         "    print(f\"La cuenta creada es: {usuarios}\")\n",
         "\n",
@@ -185,7 +233,7 @@
       "metadata": {
         "id": "5l1InNpWifeb"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -206,7 +254,7 @@
       "metadata": {
         "id": "PRXMZZGnijIi"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -249,52 +297,45 @@
       "metadata": {
         "id": "6VqLT2LRilYk"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "menu()"
+        "# Función 4: Mostrar usuarios.\n",
+        "\n",
+        "def mostrar_usuarios():\n",
+        "    for llaves in lista_usuarios:\n",
+        "        nombre = (list(llaves.values()))[0]\n",
+        "        clave = (list(llaves.values()))[1]\n",
+        "        print(f\"Usuario: {nombre} - Contraseña: {clave}\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GGXqlYY7itSj",
-        "outputId": "0ad10537-68ea-4acd-ed0a-18bf3f9be5d7"
+        "id": "HZ7xdRo0FviS"
       },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "---------------------------------\n",
-            "\n",
-            "Bienvenidos a sistema de logueo... \n",
-            "\n",
-            "---------------------------------\n",
-            "\n",
-            "\n",
-            "          Escoge alguna opción: \n",
-            "          (1)- Registra nuevo usuario\n",
-            "          (2)- Consulta por último usuario registrado  \n",
-            "          (3)- Revisa listado de usuarios\n",
-            "          (4)- Ingresa con tus credenciales\n",
-            "          (99) - Salir del programa\n",
-            "          99\n",
-            "\n",
-            "---------------------------------\n",
-            "\n",
-            "Gracias, nos vemos\n",
-            "\n",
-            "---------------------------------\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Función 5: Guardar lista de usuarios creada en JSON\n",
+        "\n",
+        "def guardar_json():\n",
+        "    with open(\"/drive/MyDrive/DATA SCIENCE/PYTHON/Pre-entrega1-Leal/\"+\"archivo.json\", 'w') as file:\n",
+        "        try:\n",
+        "            listado_json = json.dump(lista_usuarios, file, indent = 4)\n",
+        "            print(f\"Archivo JSON creado exitosamente...\")\n",
+        "            return listado_json\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error al intentar crear el archivo JSON: {e}\")"
+      ],
+      "metadata": {
+        "id": "n2rNjPr_IUgW"
+      },
+      "execution_count": 11,
+      "outputs": []
     }
   ]
 }
