Actualización Pre-Entrega1

--- a/CODERHOUSE/PYTHON-DJANGO/Entrega1/Primera_Pre_Entrega1_Leal.ipynb
+++ b/CODERHOUSE/PYTHON-DJANGO/Entrega1/Primera_Pre_Entrega1_Leal.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtkla7HI/Ro2ZAunBEbDWP",
+      "authorship_tag": "ABX9TyMbbb78tgpD9V3wyIk61+Mp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,6 +63,18 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Enlace con archivo Colab y JSON:\n",
+        "# https://drive.google.com/drive/folders/195Gc1iD0bjj43QNXoWkGqAUdQTk555QD?usp=drive_link"
+      ],
+      "metadata": {
+        "id": "MHDqBnfpLjd2"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "ÚNICO LLAMADO PARA JUGAR CON LAS FUNCIONES SOLICITADAS"
@@ -77,10 +89,88 @@
         "menu()"
       ],
       "metadata": {
-        "id": "8gCz2NLjKoie"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8gCz2NLjKoie",
+        "outputId": "89763895-f1d7-48e4-b12c-09f61b89f6b1"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "---------------------------------\n",
+            "\n",
+            "Bienvenidos a sistema de logueo... \n",
+            "\n",
+            "---------------------------------\n",
+            "\n",
+            "\n",
+            "          Escoge alguna opción: \n",
+            "          (1)- Registra nuevo usuario\n",
+            "          (2)- Consulta por último usuario registrado  \n",
+            "          (3)- Revisa listado de usuarios\n",
+            "          (4)- Ingresa con tus credenciales\n",
+            "          (5)- Guardar Lista usuarios a JSON\n",
+            "          (99) - Salir del programa\n",
+            "          1\n",
+            "Ingrese su nombre de usuario: Lolo\n",
+            "Lo siento, ese nombre ya está ocupado\n",
+            "Ingrese su nombre de usuario: lola\n",
+            "Ingrese contraseña: 12345\n",
+            "Ok, usuario y contraseña creada\n",
+            "La cuenta creada es: {'nombre': 'lola', 'clave': '12345'}\n",
+            "¿Desea volver al menú principal? S / n  : S\n",
+            "\n",
+            "---------------------------------\n",
+            "\n",
+            "Bienvenidos a sistema de logueo... \n",
+            "\n",
+            "---------------------------------\n",
+            "\n",
+            "\n",
+            "          Escoge alguna opción: \n",
+            "          (1)- Registra nuevo usuario\n",
+            "          (2)- Consulta por último usuario registrado  \n",
+            "          (3)- Revisa listado de usuarios\n",
+            "          (4)- Ingresa con tus credenciales\n",
+            "          (5)- Guardar Lista usuarios a JSON\n",
+            "          (99) - Salir del programa\n",
+            "          5\n",
+            "Esta es la lista de usuatios sin transformar: [{'nombre': 'lolo', 'clave': '12345'}, {'nombre': 'lola', 'clave': '12345'}]\n",
+            "Archivo JSON creado exitosamente...\n",
+            "¿Desea volver al menú principal? S / n  : S\n",
+            "\n",
+            "---------------------------------\n",
+            "\n",
+            "Bienvenidos a sistema de logueo... \n",
+            "\n",
+            "---------------------------------\n",
+            "\n",
+            "\n",
+            "          Escoge alguna opción: \n",
+            "          (1)- Registra nuevo usuario\n",
+            "          (2)- Consulta por último usuario registrado  \n",
+            "          (3)- Revisa listado de usuarios\n",
+            "          (4)- Ingresa con tus credenciales\n",
+            "          (5)- Guardar Lista usuarios a JSON\n",
+            "          (99) - Salir del programa\n",
+            "          99\n",
+            "\n",
+            "---------------------------------\n",
+            "\n",
+            "Gracias, nos vemos\n",
+            "\n",
+            "---------------------------------\n",
+            "\n",
+            "Esta es la lista de usuatios sin transformar: [{'nombre': 'lolo', 'clave': '12345'}, {'nombre': 'lola', 'clave': '12345'}]\n",
+            "Archivo JSON creado exitosamente...\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -323,7 +413,7 @@
         "# Función 5: Guardar lista de usuarios creada en JSON\n",
         "\n",
         "def guardar_json():\n",
-        "    with open(\"/drive/MyDrive/DATA SCIENCE/PYTHON/Pre-entrega1-Leal/\"+\"archivo.json\", 'w') as file:\n",
+        "    with open(\"/drive/MyDrive/DATA SCIENCE/PYTHON/Pre-entrega1-Leal/\"+\"listado_usuarios.json\", 'w') as file:\n",
         "        try:\n",
         "            listado_json = json.dump(lista_usuarios, file, indent = 4)\n",
         "            print(f\"Archivo JSON creado exitosamente...\")\n",
@@ -334,7 +424,7 @@
       "metadata": {
         "id": "n2rNjPr_IUgW"
       },
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": []
     }
   ]
